tolk-tester/tests/invalid-declaration/err-1839.tolk
enum Over {
    A = (+115792089237316195423570985008687907853269984665640564039457584007913129639934 << 1) * 2,
}

/**
@compilation_should_fail
@stderr integer overflow
 */
